--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <p>Я счастлив, что ты теперь с нами
+    <p>Я счастлив
     </p>
 
     <script src="js/script.js"></script>
